ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_first_field_name.snap
---
source: ast/src/parser.rs
expression: "Parser ::\nnew(Lexer :: new(\"struct S { : number, b: number, c: number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of (2) identifier, `}`",
                span: 1:12; [11, 12],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    824,
                ),
            },
        ],
    },
)
