ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_first_field_type.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: , b: number, c: number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (1) identifier 683",
                span: 1:15; [14, 15],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    680,
                ),
            },
        ],
    },
)
