ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_open_curly_one_field.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"struct S a: number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `{`, got identifier",
                span: 1:10; [9, 10],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    821,
                ),
            },
        ],
    },
)
