ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_second_field_colon.snap
---
source: ast/src/parser.rs
expression: "Parser ::\nnew(Lexer :: new(\"struct S { a: number, b number, c: number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected identifier(number), expected one of (1) `:`",
                span: 1:25; [24, 30],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    875,
                ),
            },
        ],
    },
)
