ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_second_field_name.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of (2) identifier, `}`",
                span: 1:23; [22, 23],
                level: Error,
            },
        ],
        inputs: (),
    },
)
