ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_second_field_type.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number, b: , c: number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (1) identifier 694",
                span: 1:26; [25, 26],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    691,
                ),
            },
        ],
    },
)
