ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_third_field_type.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number, b: number, c: }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of (1) identifier 704",
                span: 1:37; [36, 37],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    701,
                ),
            },
        ],
    },
)
