ast/src/snapshots/transmute_ast__parser__tests__err_struct_wrong_equal.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `=`, expected one of (1) `{`",
                span: 1:10; [9, 10],
                level: Error,
            },
        ],
        inputs: (),
    },
)
