ast/src/snapshots/transmute_ast__parser__tests__err_unexpected_token_in_place_of_potential_operator_or_method_call_or_equal.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"f 4;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number(4), expected one of (16) `;`, `.`, `{`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1947,
                ),
            },
        ],
    },
)
